# janken-duel

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  pull_request_template.md
game/: ai.py  combo.py  effects.py  janken.py  pointing.py  score.py  sounds.py  speed.py  state_manager.py  taunts.py
