[project]
name = "janken-duel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "pygame>=2.6.1",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]

[tool.bandit]
skips = ["B311", "B110"]
exclude_dirs = ["tests"]
